--- a/package.json
+++ b/package.json
@@ -47,6 +47,6 @@
     "postcss": "^8.4.23",
     "tailwindcss": "^3.3.0",
     "typescript": "^5",
-    "puppeteer": "^21.4.0"
+    "node-fetch": "^3.3.0"
   }
 }
