--- a/package.json
+++ b/package.json
@@ -16,7 +16,10 @@
   },
   "dependencies": {
     "@fontsource/pacifico": "^5.2.6",
+    "@react-three/drei": "^10.7.6",
+    "@react-three/fiber": "^9.3.0",
     "@tailwindcss/typography": "^0.5.16",
+    "@types/three": "^0.180.0",
     "framer-motion": "^12.23.12",
     "gray-matter": "^4.0.3",
     "katex": "^0.16.11",
@@ -31,7 +34,8 @@
     "rehype-raw": "^6.1.1",
     "remark-gfm": "^4.0.1",
     "remark-math": "^6.0.0",
-    "shiki": "^0.14.0"
+    "shiki": "^0.14.0",
+    "three": "^0.180.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
