--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@types/three": "^0.180.0",
     "framer-motion": "^12.23.12",
     "gray-matter": "^4.0.3",
+    "jsdom": "^27.0.1",
     "katex": "^0.16.11",
     "lucide-react": "^0.540.0",
     "next": "15.5.0",
